# mini_poject

app/: pyproject.toml
app/app/: __init__.py
app/app/routes/: default.py
