[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mentuly <danlutsencko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
app = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
